fix: Update Tooltip to wrap on page end

--- a/client/src/common/components/Tooltip/styles.sass
+++ b/client/src/common/components/Tooltip/styles.sass
@@ -21,8 +21,9 @@
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4)
     border: 1px solid colors.$gray
     word-wrap: break-word
+    overflow-wrap: anywhere
     text-align: center
-    white-space: nowrap
+    white-space: normal
     backdrop-filter: blur(10px)
 
 @keyframes tooltipFadeIn
